Begin component refactor

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "setup": "node tools/setup/setupMessage.js && npm install && node tools/setup/setup.js",
     "start-message": "babel-node tools/startMessage.js",
     "prestart": "npm-run-all --parallel start-message",
-    "start": "npm-run-all --parallel test:watch open:src lint:watch",
+    "start": "npm-run-all --parallel open:src lint:watch",
     "open:src": "babel-node tools/srcServer.js",
     "open:dist": "babel-node tools/distServer.js",
     "lint": "esw webpack.config.* src tools --color",
@@ -92,7 +92,7 @@
     "react-addons-test-utils": "15.4.1",
     "redux-immutable-state-invariant": "1.2.4",
     "replace": "0.3.0",
-    "rg-cli": "3.1.0",
+    "rg-cli": "^3.1.0",
     "rimraf": "2.5.4",
     "sass-loader": "6.0.2",
     "style-loader": "0.13.1",
