--- a/package.json
+++ b/package.json
@@ -30,11 +30,10 @@
   "author": "brendanatme",
   "license": "MIT",
   "dependencies": {
-    "classnames": "2.2.5",
     "howler": "2.0.2",
     "immutable": "3.8.1",
     "lockr": "0.8.4",
-    "lodash": "4.17.4",
+    "lodash.forin": "^4.4.0",
     "mo-js": "0.288.1",
     "object-assign": "4.1.0",
     "react": "15.4.2",
