--- a/package.json
+++ b/package.json
@@ -33,16 +33,19 @@
     "howler": "2.0.2",
     "immutable": "3.8.1",
     "lockr": "0.8.4",
+    "lodash.debounce": "^4.0.8",
     "lodash.forin": "^4.4.0",
     "mo-js": "0.288.1",
     "object-assign": "4.1.0",
-    "react": "15.4.2",
-    "react-addons-css-transition-group": "15.4.2",
-    "react-dom": "15.4.1",
-    "react-key-handler": "0.3.0",
-    "react-redux": "5.0.1",
-    "react-router": "3.0.0",
+    "react": "^16.8.6",
+    "react-click-outside": "^3.0.1",
+    "react-dom": "^16.8.6",
+    "react-key-handler": "^1.2.0-beta.3",
+    "react-redux": "^7.0.3",
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
     "react-router-redux": "4.0.7",
+    "react-transition-group": "^1.2.1",
     "redux": "3.6.0",
     "redux-thunk": "2.1.0"
   },
