--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "Very. Dope. Machine.",
   "engines": {
-    "npm": ">=3"
+    "node": "8.9.3"
   },
   "scripts": {
     "preinstall": "node tools/nodeVersionCheck.js",
